<resources>
   <string name="app_name">올레팜</string>
   <string name="image">image</string>
   <string name="login">Login</string>
   <string name="forgot_password">Forgot Password?</string>
   <string name="remember_me">Remember Me</string>
   <string name="please_enter_your_e_mail">Please enter your e-mail</string>
   <string name="password">Password</string>
    <string name="profile">Profile</string>
   <string name="information">Information</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="e_mail">E-mail</string>
    <string name="save_change">Save Change</string>
    <string name="exit_without_change">Exit without Change</string>
    <string name="change_password">Change Password</string>
    <string name="please_check_your_e_mail_again">Please check your e-mail again</string>
   <string name="close">close</string>
   <string name="profile_picture">Profile Picture</string>
   <string name="use_camera">Use Camera</string>
   <string name="gallery">Gallery</string>
   <string name="default_notification_channel_id">fcm_default_channel</string>
</resources>