<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

   <data>

   </data>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:background="@drawable/shape_dialog"
       android:orientation="vertical">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="vertical"
          android:padding="@dimen/padding_side_wide">

         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/margin_buttons"
             android:gravity="center"
             android:text="@string/profile_picture"
             android:textAppearance="@style/Font.Title.Headline" />

         <TextView
             android:id="@+id/tv_camera"
             style="@style/Button.Stroke"
             android:layout_width="match_parent"
             android:layout_marginBottom="@dimen/margin_buttons"
             android:gravity="center"
             android:text="@string/use_camera"
             android:textAppearance="@style/Font.Body.Body2" />

         <TextView
             android:id="@+id/tv_gallery"
             style="@style/Button.Stroke"
             android:layout_width="match_parent"
             android:gravity="center"
             android:text="@string/gallery"
             android:textAppearance="@style/Font.Body.Body2" />
      </LinearLayout>


      <TextView
          android:id="@+id/tv_back"
          android:layout_width="match_parent"
          android:layout_height="56dp"
          android:background="@drawable/shape_dialog_close"
          android:gravity="center"
          android:text="@string/close"
          android:textAppearance="@style/Font.Body.Body2" />
   </LinearLayout>
</layout>