<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

<!--        <include-->
<!--            android:id="@+id/toolbar"-->
<!--            layout="@layout/toolbar" />-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_side">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:drawableStart="@drawable/ic_mail"
                android:drawablePadding="@dimen/drawable_padding"
                android:hint="@string/please_enter_your_e_mail"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textAppearance="@style/Font.Body.Body2" />

            <TextView
                style="@style/Button.Full.Green"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:text="@string/change_password" />

            <TextView
                style="@style/WarningDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/margin_middle"
                android:text="@string/please_check_your_e_mail_again" />
        </LinearLayout>
    </LinearLayout>
</layout>